feat: 重构AgentProvider状态检测与执行路由逻辑
refactor(AgentProviderRegistry): 引入状态缓存机制优化性能
fix(WorkerExecutorRouter): 修复provider-backed worker路由优先级问题
feat(ProviderExecutionSupport): 新增统一provider执行后端支持矩阵
docs: 更新TROUBLESHOOT文档新增常见问题排查指南
test: 补充路由与状态检测相关测试用例